k8s/ai-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
spec:
  replicas: 3 # start with 3 pods
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai-service
          image: __REGISTRY__/ai-service:__IMAGE_TAG__
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
spec:
  selector:
    app: ai-service
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
